2008-04-07  Jaroslav Hajek <highegg@gmail.com>

	* qrupdate/dqrqhu.f, qrupdate/zqrqhu.f,
	* qrupdate/dqrshc.f, qrupdate/zqrshc.f,
	* qrupdate/dchinx.f, qrupdate/zchinx.f,
	* qrupdate/dchdex.f, qrupdate/zchdex.f: New files.

2008-04-02  Jaroslav Hajek <highegg@gmail.com>

	* blas-xtra/xzdotu.f: Turn into simple wrapper for zdotu.
	* blas-xtra/xzdotc.f: Turn into simple wrapper for zdotc.
	* qrupdate/zqrqhv.f: Undo previous change.

2008-03-22  David Bateman  <dbateman@free.fr>

	* qrupdate/dch1up.f: Remove unused external reference to dlartv.

2008-03-18  John W. Eaton  <jwe@octave.org>

	* qrupdate/zqrqhv.f (zqrqhv): Call xzdotc instead of zdotc.
	* blas-xtra/xzdotu.f: Eliminate local zdotu variable.
	* blas-xtra/xzdotc.f: New file.
	* blas-xtra/Makefile.in (FSRC): Add it to the list.

2008-03-10  John W. Eaton  <jwe@octave.org>

	* blas/zdrot.f, odepack/dlsode.f, odepack/ewset.f,
	odepack/intdy.f, fftpack/cffti.f, fftpack/cfftb.f,
	fftpack/cfftf.f:
	Use (*) instead of (1) for assumed-size dimensions.

2008-03-06  Jaroslav Hajek <highegg@gmail.com>

	* qrupdate/dqrinc.f: Declare DGEMV external.
	* qrupdate/zqrinc.f: Declare ZGEMV external.
	Fix complex constant args in call to ZGEMV.

2008-03-05  Jaroslav Hajek <highegg@gmail.com>

	* qrupdate/dch1dn.f, qrupdate/zch1dn.f: add "quick return" checks.

2008-03-04 Jaroslav Hajek <highegg@gmail.com>

	* qrupdate/dch1dn.f, qrupdate/dch1up.f, 
	qrupdate/zch1dn.f, qrupdate/zch1up.f: New files.
	* qrupdate/Makefile.in (FSRC): Add them to the list.

	* qrupdate/Makefile.in, qrupdate/dqhqr.f, qrupdate/dqr1up.f,
	qrupdate/dqrdec.f, qrupdate/dqrder.f, qrupdate/dqrinc.f,
	qrupdate/dqrinr.f, qrupdate/dqrqhv.f, qrupdate/zqhqr.f,
	qrupdate/zqr1up.f, qrupdate/zqrdec.f, qrupdate/zqrder.f,
	qrupdate/zqrinc.f, qrupdate/zqrinr.f, qrupdate/zqrqhv.f:
	New files.
	* Makefile.in (CRUFT_DIRS): Add qrupdate to the list.

2008-02-14  John W. Eaton  <jwe@octave.org>

	* misc/f77-fcn.h (F77_XFCN): Call octave_rethrow_exception here