@@ -19,7 +19,7 @@ c
       subroutine zqrshc(m,n,k,Q,R,i,j)
 c purpose:      updates a QR factorization after circular shift of
 c               columns.      
-c               i.e., given an m-by-k orthogonal matrix Q, an k-by-n
+c               i.e., given an m-by-k unitary matrix Q, an k-by-n
 c               upper trapezoidal matrix R and index j in the range 
 c               1:n+1, this subroutine updates the matrix Q -> Q1 and 
 c               R -> R1 so that Q1 is again unitary, R1 upper trapezoidal, 
@@ -28,7 +28,7 @@ c               Q1*R1 = A(:,p), where A = Q*R and p is the permutation
 c               [1:i-1,shift(i:j,-1),j+1:n] if i < j  or
 c               [1:j-1,shift(j:i,+1),i+1:n] if j > i.
 c               if m == 0, the matrix Q is ignored.
-c               (real version)
+c               (complex version)
 c arguments:
 c m (in)        number of rows of the matrix Q, or 0 if Q is not needed.
 c n (in)        number of columns of the matrix R.
@@ -42,7 +42,7 @@ c j (in)        the second index determining the range (see above)
 c
       integer m,n,k,i,j
       double complex Q(m,k),R(k,n)
-      external zswap,zqhqr
+      external xerbla,zswap,zqhqr,zqrqhu
       double complex w
       integer l,jj,kk,info
 
